SmalSmall correction in the theming of the RadioButton control. Fixed font-size assignment removed. (Aligned with CheckBox control)

--- a/frameworks/themes/Jewel-Dark-NoFlat-Primary-Amethyst-Theme/src/main/resources/defaults.css
+++ b/frameworks/themes/Jewel-Dark-NoFlat-Primary-Amethyst-Theme/src/main/resources/defaults.css
@@ -1099,7 +1099,6 @@ j|FormItem {
 }
 .jewel.radiobutton span {
   padding-left: 8px;
-  font-size: 16px;
 }
 
 .jewel.slider input::-ms-fill-lower {
