--- a/frameworks/themes/Jewel-Light-Flat-Primary-Yellow-Theme/src/main/resources/defaults.css
+++ b/frameworks/themes/Jewel-Light-Flat-Primary-Yellow-Theme/src/main/resources/defaults.css
@@ -1095,7 +1095,6 @@ j|FormItem {
 }
 .jewel.radiobutton span {
   padding-left: 8px;
-  font-size: 16px;
 }
 
 .jewel.slider input::-ms-fill-lower {
